--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 <div>
     <div class="login-container">
     <form [formGroup]="userLogin" (submit)="login()" #loginForm="ngForm">
-    <h2 class="login-header">Admin Login</h2>
+    <h2 class="login-header">Login</h2>
         <div class="form-group">
         <label for="username">Email</label>
         <input 
