--- a/src/app/components/dashboard/employee/employee.component.html
+++ b/src/app/components/dashboard/employee/employee.component.html
@@ -17,7 +17,7 @@
                 <td>{{ employee._id }}</td>
                 <td>{{ employee.firstname }}</td>
                 <td>{{ employee.lastname }}</td>
-                <i class="fa-solid fa-pen-to-square me-4 icon text-primary"></i>
+                <i class="bi-pencil me-4 icon text-primary"></i>
             </tr>
         </tbody>
     </table>
