--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,7 +1,7 @@
 
 <app-header></app-header>
 
-<!-- <div class="cart-container">
+<div class="cart-container">
     <h1>Your Cart</h1>
     <div *ngIf="cartItems.length === 0">
       <p>Your cart is empty.</p>
@@ -15,6 +15,6 @@
     <button class="btn btn-danger" (click)="clearCart()">Clear Cart</button>
     </div>
   </div>
-   -->
+  
 
 <app-footer></app-footer>
