--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -2,14 +2,14 @@
 <app-header></app-header>
 
 <div class="cart-container">
-    <h1>Your Cart</h1>
+    <h1 class="cart-title">Your Cart</h1>
     <div *ngIf="cartItems.length === 0">
       <p>Your cart is empty.</p>
     </div>
     <div *ngIf="cartItems.length > 0">
       <ul>
         <li *ngFor="let item of cartItems">
-          <p><strong>{{ item.name }}</strong> - {{ item.price }}</p>
+          <p><strong>{{ item.player }} | {{ item.description }}</strong> - {{ item.price }}</p>
         </li>
       </ul>
     <button class="btn btn-danger" (click)="clearCart()">Clear Cart</button>
