--- a/src/app/components/singles/singles.component.html
+++ b/src/app/components/singles/singles.component.html
@@ -24,6 +24,7 @@
         </div>
         <div class="card-desc">
           <p><strong>Player:</strong> {{ card.player }}</p>
+          <p> {{ card.description }}</p>
           <p><strong>Price:</strong> {{ card.price }}</p>
           <button class="btn btn-primary" (click)="addToCart(card)">Add to cart</button>
         </div>
