--- a/src/app/components/boxes/boxes.component.html
+++ b/src/app/components/boxes/boxes.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="wrapper">
+<!-- <div class="wrapper">
 
 
     
@@ -10,11 +10,11 @@
         <button (click)="filterBySport('Football')" class="filter-btn">Football</button>
         <button (click)="filterBySport('Baseball')" class="filter-btn">Baseball</button>
         <button (click)="filterBySport('Soccer')" class="filter-btn">Soccer</button>
-    </nav>
+    </nav> -->
     
     <!-- Card List -->
     
-    </div>
+<!--     </div>
 
 <div class="row">
     <div class="col-sm-4">
@@ -26,10 +26,45 @@
                     <small class="card-text">Sport: {{ card.sport }}</small>
                     <small class="card-text">Brand: {{ card.brand }}</small>
                     <p class="card-price">Price: {{card.price}}</p>
-                    <button class="btn">Add to cart</button>
+                    <button class="btn" (click)="addToCart(card)">Add to cart</button>
                 </div>
                 </div>
             </div>
-    </div>
+    </div> -->
+
+
+    <div class="wrapper">
+
+
+    
+        <nav class="filterby">
+            <p>Filter by Sport: </p>
+            <button (click)="filterBySport('')" class="filter-btn">All</button>
+            <button (click)="filterBySport('Basketball')" class="filter-btn">Basketball</button>
+            <button (click)="filterBySport('Football')" class="filter-btn">Football</button>
+            <button (click)="filterBySport('Baseball')" class="filter-btn">Baseball</button>
+            <button (click)="filterBySport('Soccer')" class="filter-btn">Soccer</button>
+        </nav>
+        
+        <!-- Card List -->
+        
+        </div>
+    
+    <div class="row">
+        <div class="col-sm-4" *ngFor="let card of filteredCards">
+          <div class="card">
+            <div class="card-img">
+              <img src="../../../assets/images/boxes/{{ card.img }}" alt="{{ card.name }}">
+            </div>
+            <div class="card-desc">
+              <p><strong>Brand:</strong> {{ card.brand }}</p>
+              <p> {{ card.description }}</p>
+              <p><strong>Price:</strong> {{ card.price }}</p>
+              <button class="btn btn-primary" (click)="addToCart(card)">Add to cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    
 
 <app-footer></app-footer>
