--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -12,8 +12,18 @@
 }
 
 .btn{
-color:#F7F7FF;
-background-color: #fe5f55;
+    color:#F7F7FF;
+    background-color: #fe5f55;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+    
+.btn:hover {
+    background-color: #f7f7ff;
+    color: #fe5f55;
+    border-color: #f7f7ff;
+    transform: scale(1.05);
+    transition: color 0.5s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .titles{
