--- a/src/app/components/singles/singles.component.css
+++ b/src/app/components/singles/singles.component.css
@@ -7,14 +7,14 @@
 }
 
 .wrapper{
-    margin-right: 10%;
-    margin-left: 10%;
+    margin-right: 33%;
+    margin-left: 33%;
 }
 
 .btn{
 color:#F7F7FF;
 background-color: #fe5f55;
-
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .btn:hover {
@@ -32,10 +32,14 @@ background-color: #fe5f55;
 
 .card{
     border: 1px solid #e0e0e0; 
-    border-radius: 8px; 
+    border-radius: 2%; 
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff; 
+    max-width: 500px;
+    min-width: 277px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-text{
@@ -80,6 +84,7 @@ margin-top: 10%;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 2%;
 }
 
 .card-price {
@@ -110,6 +115,8 @@ margin-top: 10%;
     box-sizing: border-box; 
     font-size: 16px;
     text-align: center;
+    min-width: 123px;
+    max-height: 45px;
 }
 
 .filter-btn{
@@ -120,7 +127,8 @@ margin-top: 10%;
     margin: 3px;
     justify-content: center;
     align-items: center;
-    
+    min-width: 123px;
+    max-height: 45px;
     }
 
     .filter-btn:hover {
@@ -129,6 +137,7 @@ margin-top: 10%;
         border-color: #f7f7ff;
         transform: scale(1.05);
         transition: color 0.5s ease;
+        
     }
 
     p, .filter-btn {
