--- a/src/app/components/dashboard/boxes/boxes.component.html
+++ b/src/app/components/dashboard/boxes/boxes.component.html
@@ -1,12 +1,11 @@
 <div class="container mt-4">
-    <h2>Available Singles</h2>
+    <h2>Available Breaks</h2>
 
     <table class="table">
     <thead>
         <tr>
         <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Brand</th>
         <th>Sport</th>
         <th>Description</th>
         <th>Price</th>
@@ -14,27 +13,26 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let card of singles">
-        <td>{{ card._id }}</td>
-        <td>{{ card.firstname }}</td>
-        <td>{{ card.lastname }}</td>
-        <td>{{ card.sport }}</td>
-        <td>{{ card.description }}</td>
-        <td>${{ card.price }}</td>
+        <tr *ngFor="let box of boxes">
+        <td>{{ box._id }}</td>
+        <td>{{ box.brand }}</td>
+        <td>{{ box.sport }}</td>
+        <td>{{ box.description }}</td>
+        <td>${{ box.price }}</td>
         <td>
             <!-- Edit Button -->
             <button
             class="btn btn-primary btn-sm"
             data-bs-toggle="modal"
-            data-bs-target="#editCardModal"
-            (click)="getCard(card._id)"
+            data-bs-target="#editBoxModal"
+            (click)="getBox(box._id)"
             >
             Edit
             </button>
             <!-- Delete Button -->
             <button
             class="btn btn-danger btn-sm"
-            (click)="deleteCard(card._id)"
+            (click)="deleteBox(box._id)"
             >
             Delete
             </button>
@@ -44,26 +42,26 @@
     </table>
     <button
     type="button"
-    class="btn btn-success mb-3 addCard"
+    class="btn btn-success mb-3 addBox"
     data-bs-toggle="modal"
-    data-bs-target="#addCardModal"
+    data-bs-target="#addBoxModal"
     >
-    Add New Card
+    Add New Box
     </button>
 </div>
 
-<!-- Modal for Adding Card -->
+<!-- Modal for Adding Break -->
 <div
 class="modal fade"
-id="addCardModal"
+id="addBoxModal"
 tabindex="-1"
-aria-labelledby="addCardModalLabel"
+aria-labelledby="addBoxModalLabel"
 aria-hidden="true"
 >
 <div class="modal-dialog">
     <div class="modal-content">
     <div class="modal-header">
-        <h5 class="modal-title" id="addCardModalLabel">Add New Card</h5>
+        <h5 class="modal-title" id="addBoxModalLabel">Add New Break</h5>
         <button
         type="button"
         class="btn-close"
@@ -74,22 +72,12 @@ aria-hidden="true"
     <div class="modal-body">
         <form>
         <div class="mb-3">
-            <label for="firstname" class="form-label">First Name</label>
+            <label for="brand" class="form-label">Brand</label>
             <input
             type="text"
-            id="firstname"
-            [(ngModel)]="card.firstname"
-            name="firstname"
-            class="form-control"
-            />
-        </div>
-        <div class="mb-3">
-            <label for="lastname" class="form-label">Last Name</label>
-            <input
-            type="text"
-            id="lastname"
-            [(ngModel)]="card.lastname"
-            name="lastname"
+            id="brand"
+            [(ngModel)]="box.brand"
+            name="brand"
             class="form-control"
             />
         </div>
@@ -97,7 +85,7 @@ aria-hidden="true"
             <label for="role" class="form-label">Sport</label>
             <select
             id="role"
-            [(ngModel)]="card.sport"
+            [(ngModel)]="box.sport"
             name="role"
             class="form-select"
             >
@@ -113,7 +101,7 @@ aria-hidden="true"
             <input
             type="text"
             id="description"
-            [(ngModel)]="card.description"
+            [(ngModel)]="box.description"
             name="description"
             class="form-control"
             />
@@ -124,7 +112,7 @@ aria-hidden="true"
             placeholder="$150"
             type="text"
             id="price"
-            [(ngModel)]="card.price"
+            [(ngModel)]="box.price"
             name="price"
             class="form-control"
             />
@@ -146,7 +134,7 @@ aria-hidden="true"
         <button
         type="button"
         class="btn btn-primary"
-        (click)="addCard()"
+        (click)="addBox()"
         data-bs-dismiss="modal"
         >
         Add
@@ -160,15 +148,15 @@ aria-hidden="true"
 <!-- Modal for Editing -->
 <div
     class="modal fade"
-    id="editCardModal"
+    id="editBoxModal"
     tabindex="-1"
-    aria-labelledby="editCardModalLabel"
+    aria-labelledby="editBoxModalLabel"
     aria-hidden="true"
 >
     <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-        <h5 class="modal-title" id="editCardModalLabel">Edit Card</h5>
+        <h5 class="modal-title" id="editBoxModalLabel">Edit Break</h5>
         <button
             type="button"
             class="btn-close"
@@ -179,22 +167,12 @@ aria-hidden="true"
         <div class="modal-body">
         <form>
             <div class="mb-3">
-            <label for="firstname" class="form-label">First Name</label>
+            <label for="brand" class="form-label">Brand</label>
             <input
                 type="text"
-                id="firstname"
-                [(ngModel)]="card.firstname"
-                name="firstname"
-                class="form-control"
-            />
-            </div>
-            <div class="mb-3">
-            <label for="lastname" class="form-label">Last Name</label>
-            <input
-                type="text"
-                id="lastname"
-                [(ngModel)]="card.lastname"
-                name="lastname"
+                id="brand"
+                [(ngModel)]="box.brand"
+                name="brand"
                 class="form-control"
             />
             </div>
@@ -202,7 +180,7 @@ aria-hidden="true"
                 <label for="role" class="form-label">Sport</label>
                 <select
                 id="role"
-                [(ngModel)]="card.sport"
+                [(ngModel)]="box.sport"
                 name="role"
                 class="form-select"
                 >
@@ -218,7 +196,7 @@ aria-hidden="true"
                 <input
                 type="text"
                 id="description"
-                [(ngModel)]="card.description"
+                [(ngModel)]="box.description"
                 name="description"
                 class="form-control"
                 />
@@ -228,7 +206,7 @@ aria-hidden="true"
                 <input
                 type="text"
                 id="price"
-                [(ngModel)]="card.price"
+                [(ngModel)]="box.price"
                 name="price"
                 class="form-control"
                 />
@@ -246,7 +224,7 @@ aria-hidden="true"
         <button
             type="button"
             class="btn btn-primary"
-            (click)="updateCard()"
+            (click)="updateBox()"
             data-bs-dismiss="modal"
         >
             Save
