--- a/src/app/components/dashboard/breaks/breaks.component.css
+++ b/src/app/components/dashboard/breaks/breaks.component.css
@@ -2,13 +2,13 @@
     cursor: pointer;
 }
 
-.addCard{
+.addBreak{
     color:#F7F7FF;
     background-color: #fe5f55;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     
-    .addCard:hover {
+    .addBreak:hover {
         background-color: #f7f7ff;
         color: #fe5f55;
         border-color: #f7f7ff;
