--- a/src/app/components/dashboard/dashboard-nav/dashboard-nav.component.html
+++ b/src/app/components/dashboard/dashboard-nav/dashboard-nav.component.html
@@ -3,19 +3,18 @@
 <div class="d-flex">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="list-group list-flush-group">
-            <a href="/dashboard" class="list-group-item list-group-item-action bg-light">
-                Dashboard Home</a>
+
 
             <a href="/dashboard/employee" class="list-group-item list-group-item-action bg-light">
                 Employees</a>
 
-            <a href="#" class="list-group-item list-group-item-action bg-light">
+            <a href="/dashboard/singles" class="list-group-item list-group-item-action bg-light">
                 Singles</a>
 
-            <a href="#" class="list-group-item list-group-item-action bg-light">
+            <a href="/dashboard/boxes" class="list-group-item list-group-item-action bg-light">
                 Boxes</a>
 
-            <a href="#" class="list-group-item list-group-item-action bg-light">
+            <a href="/dashboard/breaks" class="list-group-item list-group-item-action bg-light">
                 Breaks</a>
             
         </div>
